<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ActivityMain!</string>
    <string name="action_settings">Settings</string>
    <string name="etnameinit">请输入记事名称</string>
    <string name="etmaininit">请输入记事内容</string>
    <string name="music">音乐列表</string>
    <string name="app_name">MyNotePad7</string>
    <string name="hint_username" >用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="remmeber_pwd">记住密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_save">保存</string>
    <string name="view_mydiary">我的日记</string>
</resources>
