<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbe6c9"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wxq.mydiary_treasure.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/view_mydiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:paddingTop="70sp"
        android:text="@string/view_mydiary"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_mydiary"
        android:ems="10" 
        android:hint="@string/hint_username">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_username"
        android:ems="10"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword" />
    <CheckBox
        android:id="@+id/check_rememberPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_pwd"
        android:layout_marginTop="17dp"
        android:text="@string/remmeber_pwd" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/check_rememberPwd"
        android:background="#CD7F32"
        android:layout_marginTop="15dp"
        android:text="@string/btn_login" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:visibility="gone"
        android:layout_centerVertical="true" />

    

</RelativeLayout>

